--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
         
     </style>
     <body>
+        <h1>Why to Choose <span>Road To Code</span> ?</h1>
+        <div>
+            <img/>
+            <p>Affordable Pricing</p>
+            Our course price ranges from ₹499 to ₹1999. <span>Which is less than 1% of the cost of a college degree in India,</span> and we provide more practical and industry-oriented knowledge.
+        </div>
+        <div>
+            <img />
+            <p>Live interactive classes</p>
+            Attend live class and get your doubts cleared by the instructor in real-time just like a physical classroom. No boring pre-recorded videos.
+        </div>
+        <div>
+            <img />
+            <p>Recorded Videos of Live Classes.</p>
+            Missed a class? or want to revise? No worries, watch the recorded sessions of live classes multiple times at your own pace and time to understand the concepts better.
+        </div>
 
     </body>
 </html>
