--- a/index.html
+++ b/index.html
@@ -4,21 +4,48 @@
         <title>Cards Creation RTC Demo</title>
     </head>
     <style>
+        body{
+            margin: 0px;
+            height: 0px;
+            background-color: white;
+            margin-left: 100px;
+            margin-top: 40px;
+          
+
+        }
+        h1{
+            text-align: center;
+            color: grey;
+        }
+        .card{
+            box-shadow: 2px 2px 10px 4px rgb(221, 205, 205);
+            display: inline-block;
+            height: 140px;
+            width: 300px;
+            background-color:transparent;
+            padding: 15px;
+            margin: 10px;
+            text-align: justify;
+            border-radius: 5px;
+        }
+        .card:hover{
+            background-color: rgba(250, 235, 215, 0.719);
+        }
         
     </style>
     <body>
         <h1>Why to Choose <span>Road To Code</span> ?</h1>
-        <div>
+        <div class="card">
             <img/>
             <p>Affordable Pricing</p>
             Our course price ranges from ₹499 to ₹1999. <span>Which is less than 1% of the cost of a college degree in India,</span> and we provide more practical and industry-oriented knowledge.
         </div>
-        <div>
+        <div class="card">
             <img />
             <p>Live interactive classes</p>
             Attend live class and get your doubts cleared by the instructor in real-time just like a physical classroom. No boring pre-recorded videos.
         </div>
-        <div>
+        <div class="card">
             <img />
             <p>Recorded Videos of Live Classes.</p>
             Missed a class? or want to revise? No worries, watch the recorded sessions of live classes multiple times at your own pace and time to understand the concepts better.
